# zephyr

./: MAINTAINERS.yml
drivers/counter/: Kconfig.mspm0  counter_mspm0_timer.c
drivers/entropy/: Kconfig.mspm0_trng
drivers/pinctrl/: pinctrl_mspm0.c
soc/ti/mspm/: CMakeLists.txt
tests/drivers/counter/counter_basic_api/src/: test_counter.c
